# qiro-rag

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EVIDENCE_PACKS.md  FUTURE_LANGCHAIN_PROMPT.md  LANGGRAPH_WORKFLOW.md  MODEL_PROFILES.md  PRIVACY.md  ROADMAP.md  SCHEMAS.md  STEP3_PRODUCT_BRIEF.md
examples/evidence-pack/: ingestion_report.md  manifest.csv  review_decisions.csv
examples/step2/: finding.json
examples/synthetic_eval/: README.md  expected_statuses.json
examples/synthetic_eval/docs/carbon/: ghg_method.md  offset_retirement.md  reduction_plan.md
examples/synthetic_eval/docs/compost/: home_compostability.md
examples/synthetic_eval/docs/lca/: climate_positive_lca.md
examples/synthetic_eval/docs/marketing/: campaign_draft.txt
examples/synthetic_eval/docs/product/: product_spec.md  rebox_bom.csv
examples/synthetic_eval/docs/recycling/: recycling_limits.md
examples/synthetic_eval/findings/: carbon.json  climate_positive.json  compostable.json  recyclable.json  recycled.json
src/qiro_rag/: __init__.py  assess.py  autotag.py  cli.py  connectors.py  embeddings.py  evidence_lenses.py  evidence_pack.py  framing.py  index.py  ingest.py  learning.py  llm_judge.py  manifest.py  model_profiles.py  parsing.py  retrieval.py  schemas.py  utils.py  verifier.py
src/qiro_rag/workflows/: __init__.py  langgraph_assess.py
tests/: test_evidence_pack.py  test_langgraph_workflow.py  test_model_profiles.py  test_parsing_formats.py  test_remaining_capabilities.py  test_review_findings.py  test_step3_pipeline.py  test_synthetic_eval.py
