[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "qiro-rag"
version = "0.1.0"
description = "Local-first evidence substantiation/RAG for Qiro environmental claim review."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Qiro RAG contributors" }]
keywords = ["rag", "substantiation", "greenwashing", "compliance", "environmental-claims"]
dependencies = [
  "openpyxl>=3.1",
  "pydantic>=2.6",
  "pypdf>=5.0",
  "python-docx>=1.1",
  "typer>=0.12",
]

[project.optional-dependencies]
rag = ["docling>=2.0"]
local-embeddings = ["sentence-transformers>=3.0"]
ocr = ["pdf2image>=1.17", "pytesseract>=0.3", "Pillow>=10"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
qiro-rag = "qiro_rag.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/qiro_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
